Structure Css files

--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,12 @@
 
   <div class="large-img">
     <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+    <div class="large-img__text-content">
+      <h1 class="large-img__title">Your clarity.</h1>
+      <h2 class="large-img__subtitle">One trip away.</h2>
+      <p class="large-img__description">We create soul restoring journeys that inspire you to be you.</p>
+      <p><a href="#">Get Started Today</a></p>
+    </div>
   </div>
 
   <div id="our-beginning">
