--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
       <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
 
       <div class="wrapper wrapper--medium wrapper--b-margin">
-        <img sizes="(min-width: 970px) 976px, 100vw" srcset="assets/images/first-trip-low-res-i.jpg 565vw, assets/images/first-trip.jpg 976vw, assets/images/first-triphi-dpi.jpg 1952vw" alt="Couple walking down a street.">
+        <img sizes="(min-width: 970px) 976px, 100w" srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
       </div>
 
       <div class="row row--gutters">
