--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="site-header__menu-icon">
-        
+        <div class="site-header__menu-icon__bar"></div>
       </div>
       <div class="site-header__menu-content">
         <div class="site-header__button-container">
